# markthat

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  gradio_ui.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst  quickstart.rst
examples/: basic_usage.py
markthat/: __init__.py  client.py  figure_extraction.py  file_processor.py  image_processing.py  logging_config.py  providers_clients.py
markthat/prompts/: __init__.py  base.py  base_prompts.py
markthat/prompts/templates/: system_prompt.j2  system_prompt_describe.j2  system_prompt_extract_figure.j2  system_prompt_get_coordinates.j2  user_prompt.j2  user_prompt_describe.j2  user_prompt_extract_figure.j2  user_prompt_get_coordinates.j2
markthat/utils/: __init__.py  validation.py
tests/: test_validation.py
