[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markthat"
version = "0.1.0"
description = " refactor of the MarkThat image-to-Markdown/description converter"
readme = "README.md"
authors = [{name = "OpenAI Assistant"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.60.0",
    "google-generativeai>=0.8.0",
    "mistralai>=1.7.0",
    "pymupdf>=1.26.0",
    "numpy>=1.25.0",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
    "Jinja2>=3.1.0",
]

[project.optional-dependencies]
llm = [
    "google-generativeai",
    "openai",
    "anthropic",
    "mistralai",
]

dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "pre-commit>=3.5.0",
]

[tool.black]
target-version = ["py39"]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]

